--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1498,3 +1498,20 @@ howpublished = {To appear}
 	organization= {ISC Events},
 	year=2020
 }
+
+
+@book{ganter1999formal,
+  added-at = {2011-01-27T13:46:11.000+0100},
+  address = {Berlin/Heidelberg},
+  author = {Ganter, Bernhard and Wille, Rudolf},
+  biburl = {https://www.bibsonomy.org/bibtex/2ae14b00b5489de8da6e4578ac3062bfc/jaeschke},
+  interhash = {1b0bf49069eadcdfac42e52addf4eb9d},
+  intrahash = {ae14b00b5489de8da6e4578ac3062bfc},
+  keywords = {},
+  publisher = {Springer},
+  timestamp = {2011-09-22T11:56:28.000+0200},
+  title = {Formal Concept Analysis: Mathematical Foundations},
+  year = 1999
+}
+
+
