--- a/main.tex
+++ b/main.tex
@@ -527,43 +527,43 @@ The numbers are obtained in two steps.
 Firstly, the dimension reduction aggregates the file system and the node dimensions and computes a mean value for each metric and segment, which lies in the interval [0,4].
 Secondly, the mean values are quantized into one NonIO level and 16 I/O levels according to \Cref{tab:quant_intervals}.
 
-The example below shows Q-coding for a job containing 6 segments.
-
-\begin{table}
+\begin{table}[h]
   \begin{subtable}{0.49\textwidth}
     \centering
     \begin{tabular}{lll}
-      Code & Interval      & Interval Size \\
+      Code        & Interval      & Interval Size \\ 
       \midrule
-      0, -, NonIO     & [0,0.125)     & 0.125         \\
-      1     & [0.125,0.375) & 0.25          \\
-      2    & [0.375,0.625) & 0.25          \\
-      3    & [0.625,0.875) & 0.25          \\
-      4    & [0.875,1.125) & 0.25          \\
-      5    & [1.125,1.375) & 0.25          \\
-      6    & [1.375,1.625) & 0.25          \\
-      7    & [1.625,1.875) & 0.25          \\
-      8     & [1.875,2.125) & 0.25          \\
+      0, -, NonIO & [0,0.125)     & 0.125         \\ 
+      1           & [0.125,0.375) & 0.25          \\ 
+      2           & [0.375,0.625) & 0.25          \\ 
+      3           & [0.625,0.875) & 0.25          \\ 
+      4           & [0.875,1.125) & 0.25          \\ 
+      5           & [1.125,1.375) & 0.25          \\ 
+      6           & [1.375,1.625) & 0.25          \\ 
+      7           & [1.625,1.875) & 0.25          \\ 
+      8           & [1.875,2.125) & 0.25          \\ 
     \end{tabular}
   \end{subtable}
   \begin{subtable}{0.49\textwidth}
     \centering
     \begin{tabular}{lll}
-      Code & Interval      & Interval Size \\
+      Code     & Interval      & Interval Size \\ 
       \midrule
-      9     & [2.125,2.375) & 0.25          \\
-      10    & [2.375,2.625) & 0.25          \\
-      11    & [2.625,2.875) & 0.25          \\
-      12    & [2.875,3.125) & 0.25          \\
-      13    & [3.125,3.375) & 0.25          \\
-      14    & [3.375,3.625) & 0.25          \\
-      15    & [3.625,3.875) & 0.25          \\
-      16    & [3.875,4]     & 0.125         \\
+      9        & [2.125,2.375) & 0.25          \\ 
+      10       & [2.375,2.625) & 0.25          \\ 
+      11       & [2.625,2.875) & 0.25          \\ 
+      12       & [2.875,3.125) & 0.25          \\ 
+      13       & [3.125,3.375) & 0.25          \\ 
+      14       & [3.375,3.625) & 0.25          \\ 
+      15       & [3.625,3.875) & 0.25          \\ 
+      16       & [3.875,4]     & 0.125         \\ 
     \end{tabular}
   \end{subtable}
 \caption{Q-codes with non-uniform quantization intervals}
 \label{tab:quant_intervals}
 \end{table}
+
+The example below shows Q-coding for a job containing 6 segments.
 
 \begin{lstlisting}[caption={Q-coding of a six segments long job.}]
 'md_file_create' : [-:-:2:2:2:9]
